[package]
name = "random_color"
version = "0.6.2"
authors = ["Lucas Maximiliano Marino <lucasmmarino@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["random", "color", "rgb", "rgba", "hsl"]
repository = "https://github.com/elementh/random_color.git"
homepage ="https://github.com/elementh/random_color"
description = "Rust crate for generating random attractive colors"

[dependencies]
fastrand = "1.7.0"
